# kaggle-laptop

./: .gitignore  .pre-commit-config.yaml  README.md  laptop_price.py  pyproject.toml
